--- a/config/database.yml
+++ b/config/database.yml
@@ -19,14 +19,18 @@ default: &default
 
 development:
   <<: *default
-  database: chat_service_db_write_ruby_development
+  host: <%= ENV.fetch("MYSQL_DEV_HOST") %>
+  port: <%= ENV.fetch("MYSQL_DEV_PORT") %>
+  database: <%= ENV.fetch("MYSQL_DEV_DB") %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: chat_service_db_write_ruby_test
+  host: <%= ENV.fetch("MYSQL_TEST_HOST") || ENV.fetch("MYSQL_DEV_HOST") %>
+  port: <%= ENV.fetch("MYSQL_TEST_PORT") || ENV.fetch("MYSQL_DEV_PORT") %>
+  database: <%= ENV.fetch("MYSQL_TEST_DB") || ENV.fetch("MYSQL_DEV_DB") %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -50,6 +54,8 @@ test:
 #
 production:
   <<: *default
-  database: chat_service_db_write_ruby_production
-  username: chat_service_db_write_ruby
-  password: <%= ENV["CHAT_SERVICE_DB_WRITE_RUBY_DATABASE_PASSWORD"] %>
+  host: <%= ENV.fetch("MYSQL_PROD_HOST") %>
+  port: <%= ENV.fetch("MYSQL_PROD_PORT") %>
+  database: <%= ENV.fetch("MYSQL_PROD_DB") %>
+  username: <%= ENV.fetch("MYSQL_PROD_USER") %>
+  password: <%= ENV.fetch("MYSQL_PROD_PASS") %>
