--- a/config/database.yml
+++ b/config/database.yml
@@ -28,9 +28,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  host: <%= ENV.fetch("MYSQL_TEST_HOST") || ENV.fetch("MYSQL_DEV_HOST") %>
-  port: <%= ENV.fetch("MYSQL_TEST_PORT") || ENV.fetch("MYSQL_DEV_PORT") %>
-  database: <%= ENV.fetch("MYSQL_TEST_DB") || ENV.fetch("MYSQL_DEV_DB") %>
+  adapter: sqlite3
+  timeout: 5000
+  database: db/test.sqlite3
+  # host: <%= ENV.fetch("MYSQL_TEST_HOST") || ENV.fetch("MYSQL_DEV_HOST") %>
+  # port: <%= ENV.fetch("MYSQL_TEST_PORT") || ENV.fetch("MYSQL_DEV_PORT") %>
+  # database: <%= ENV.fetch("MYSQL_TEST_DB") || ENV.fetch("MYSQL_DEV_DB") %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
